# q2netcdf

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  mergeqfiles.py  mkTarball  mkZip  pyproject.toml  q2netcdf.py
.github/workflows/: ci.yml  publish-to-pypi.yml
docs/: CHANGELOG.md  PYPI_SETUP.md
documents/: CHANGELOG.md
src/q2netcdf/: QConfig.py  QData.py  QFile.py  QHeader.py  QHexCodes.py  QRecordType.py  QReduce.py  QVersion.py  \  __init__.py  dumpQHeader.py  mergeqfiles  mergeqfiles.py  mergeqfiles.yaml  mkISDPcfg.py  q2netcdf.py
tests/: conftest.py  test_cli.py  test_duplication_sync.py  test_integration.py  test_main_functions.py  test_mergeqfiles.py  test_mkisdpcfg.py  test_q2netcdf.py  test_qconfig.py  test_qfile.py  test_qhexcodes.py  test_qrecordtype.py  test_qreduce.py  test_qversion.py  test_real_files.py
tests/data/: v12_14records.q  v12_15records.q  v13_131records.mri  v13_39records.mri  v13_multiheader.mri
